# SimpleGL

./: .gitignore  CMakeLists.txt  README.md  main.cpp
include/: OpenGLWindow.h  SGLBatchBuffer.h  SGLBoxRenderable2D.h  SGLBuffer.h  SGLCamera.h  SGLCubeRenderable.h  SGLElementArray.h  SGLProgram.h  SGLRenderable.h  SGLRenderer.h  SGLShader.h  SGLShaderProgram.h  SGLTexture2D.h  SGLUtility.h  SGLVertexArray.h  STBImage.h  Shader.h  SimpleGLProgram.h  Vertex.h
shaders/: FragmentShader.glsl  VertexShader.glsl
src/: OpenGLWindow.cpp  SGLBatchBuffer.cpp  SGLBoxRenderable2D.cpp  SGLBuffer.cpp  SGLCamera.cpp  SGLCubeRenderable.cpp  SGLElementArray.cpp  SGLProgram.cpp  SGLRenderable.cpp  SGLRenderer.cpp  SGLShader.cpp  SGLTexture2D.cpp  SGLVertexArray.cpp  SimpleGLProgram.cpp  shader.cpp
